# python-starter

./: Makefile  README.md  main.py  pyproject.toml  python_starter.py
src/python_starter/: cli.py
src/python_starter/commands/: hello.py
test/: test_cli.py
