[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python_starter"
version = "0.0.1"
description = "A Python example project by Zeevo"
readme = "README.md"
requires-python = ">=3.8"
classifiers = []

dependencies = ["click==8.1.7"]

[project.scripts]
starter = "python_starter.cli:cli"

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[project.optional-dependencies]
dev = ["black>=22.10.0", "pytest>=7.2.0", "pytest-cov>=4.0.0", "ruff>=0.0.219"]

[tool.ruff]
exclude = [".env", ".venv", "venv", "notebooks"]
select = ["E", "F", "I", "W"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.black]
extend-exclude = '''
/(
  | .env
  | .venv
  | venv
  | notebooks
)/
'''
