[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python_starter"
version = "0.0.1"
description = "A Python example project by Zeevo"
readme = "README.md"
requires-python = ">=3.8"
classifiers = []

dependencies = ["click==8.1.7"]

[project.scripts]
python_starter = "python_starter.cli:cli"

[project.urls]
Homepage = "https://github.com/zeevo/python-starter"
Issues = "https://github.com/zeevo/python-starter/issues"

[project.optional-dependencies]
dev = [
    "build>=1.2.1",
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.9",
    "mypy>=1.10.0",
]

[tool.ruff]
exclude = ["src/python_starter/__init__.py"]
